--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/yamaso-burger/intro-to-node/issues"
   },
-  "homepage": "https://github.com/yamaso-burger/intro-to-node#readme"
+  "homepage": "https://github.com/yamaso-burger/intro-to-node#readme",
+  "dependencies": {
+    "superheroes": "^3.0.0",
+    "supervillains": "^3.0.0"
+  }
 }
